--- a/vercel.json
+++ b/vercel.json
@@ -26,10 +26,7 @@
           "backend/venv/**",
           "backend/.env",
           "backend/api/example_code.py",
-          "backend/api/generated_simulation.py",
-          "frontend/**",
-          "node_modules/**",
-          ".git/**"
+          "backend/api/generated_simulation.py"
         ]
       }
     },
